PBEXENGDQA-4614 fix: sonar issues observable v5